chore(react): export both mjs and cjs bundles

--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -5,7 +5,7 @@
     "compilerOptions": {
         "declaration": true,
         "emitDeclarationOnly": true,
-        "outDir": "./dist",
+        "declarationDir": "./dist/types",
         "rootDir": "./src"
     }
 }
