--- a/packages/shared-state/tsconfig.json
+++ b/packages/shared-state/tsconfig.json
@@ -2,6 +2,9 @@
     "extends": "tsconfig/shared-state.json",
     "include": ["./src/**/*"],
     "compilerOptions": {
+        "declaration": true,
+        "emitDeclarationOnly": true,
+        "declarationDir": "./dist/types",
         "outDir": "./dist",
         "rootDir": "./src"
     }
