fix(frontend): add image rollup plugin

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -71,6 +71,7 @@
         "@fontsource/ibm-plex-mono": "^5.0.3",
         "@react-spring/web": "^9.7.3",
         "@rollup/plugin-commonjs": "^25.0.3",
+        "@rollup/plugin-image": "^3.0.2",
         "@rollup/plugin-json": "^6.0.0",
         "@rollup/plugin-node-resolve": "^15.1.0",
         "@rollup/plugin-replace": "^5.0.2",
