--- a/packages/eslint-config-custom/package.json
+++ b/packages/eslint-config-custom/package.json
@@ -9,12 +9,12 @@
         "format": "eslint --fix --ext .js ./ && prettier --write './**/*.{json,md}'"
     },
     "dependencies": {
-        "@typescript-eslint/eslint-plugin": "^6.2.0",
-        "@typescript-eslint/parser": "^6.2.0",
-        "eslint": "latest",
-        "eslint-config-next": "latest",
+        "@typescript-eslint/eslint-plugin": "^6.5.0",
+        "@typescript-eslint/parser": "^6.5.0",
+        "eslint": "8.48.0",
+        "eslint-config-next": "13.4.19",
         "eslint-config-prettier": "latest",
-        "eslint-config-turbo": "latest"
+        "eslint-config-turbo": "1.10.13"
     },
     "peerDependencies": {
         "eslint-plugin-prettier": "latest",
@@ -23,7 +23,7 @@
     },
     "devDependencies": {
         "eslint-plugin-prettier": "latest",
-        "eslint-plugin-react": "latest",
-        "prettier": "latest"
+        "eslint-plugin-react": "7.33.2",
+        "prettier": "3.0.3"
     }
 }
