--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -114,37 +114,38 @@
         "size-limit": "size-limit"
     },
     "dependencies": {
+        "@carrot-kpi/contracts": "^0.3.1",
         "decimal.js-light": "^2.5.1",
         "multiformats": "^9.9.0",
-        "viem": "^1.4.1"
+        "viem": "^1.10.4"
     },
     "peerDependencies": {
         "@carrot-kpi/shared-state": "*"
     },
     "devDependencies": {
-        "@babel/core": "^7.22.5",
-        "@babel/preset-env": "^7.22.5",
-        "@babel/preset-typescript": "^7.22.5",
+        "@babel/core": "^7.22.11",
+        "@babel/preset-env": "^7.22.14",
+        "@babel/preset-typescript": "^7.22.11",
         "@carrot-kpi/shared-state": "*",
-        "@jest/globals": "^29.5.0",
-        "@rollup/plugin-commonjs": "^25.0.3",
-        "@rollup/plugin-node-resolve": "^15.1.0",
-        "@size-limit/file": "^8.2.6",
-        "@types/jest": "^29.5.2",
+        "@jest/globals": "^29.6.4",
+        "@rollup/plugin-commonjs": "^25.0.4",
+        "@rollup/plugin-node-resolve": "^15.2.1",
+        "@size-limit/file": "^9.0.0",
+        "@types/jest": "^29.5.4",
         "@types/rollup-plugin-peer-deps-external": "^2.2.1",
-        "babel-jest": "^29.5.0",
+        "babel-jest": "^29.6.4",
         "eslint-config-custom": "*",
         "eslint-plugin-prettier": "^5.0.0",
-        "eslint-plugin-react": "^7.33.0",
-        "jest": "^29.5.0",
-        "prettier": "^3.0.0",
+        "eslint-plugin-react": "^7.33.2",
+        "jest": "^29.6.4",
+        "prettier": "^3.0.3",
         "rimraf": "^5.0.0",
-        "rollup": "^3.26.3",
+        "rollup": "^3.29.0",
         "rollup-plugin-esbuild": "^5.0.0",
         "rollup-plugin-peer-deps-external": "^2.2.4",
-        "size-limit": "^8.2.6",
+        "size-limit": "^9.0.0",
         "ts-jest": "^29.1.0",
         "tsconfig": "*",
-        "typescript": "^5.1.3"
+        "typescript": "^5.2.2"
     }
 }
