fix: add dual-publish plugin for size-limit

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@changesets/cli": "^2.26.2",
         "@commitlint/cli": "^17.7.1",
         "@commitlint/config-conventional": "^17.7.0",
+        "@size-limit/dual-publish": "^9.0.0",
         "husky": "^8.0.1",
         "turbo": "^1.10.13"
     }
