--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,4 +38,7 @@ jobs:
       - name: Build
         run: yarn build
       - name: Size check
-        run: yarn size-limit
+        uses: actions/checkout@v1
+        uses: andresz1/size-limit-action@v1
+          with:
+            github_token: ${{ secrets.GITHUB_TOKEN }}
