--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -159,10 +159,10 @@
             "import": "./dist/es/components/typography.mjs",
             "default": "./dist/cjs/components/typography.cjs"
         },
-        "./warning-box": {
-            "types": "./dist/types/components/warning-box.d.ts",
-            "import": "./dist/es/components/warning-box.mjs",
-            "default": "./dist/cjs/components/warning-box.cjs"
+        "./feedback-box": {
+            "types": "./dist/types/components/feedback-box.d.ts",
+            "import": "./dist/es/components/feedback-box.mjs",
+            "default": "./dist/cjs/components/feedback-box.cjs"
         },
         "./styles.css": {
             "import": "./dist/styles.css",
@@ -263,8 +263,8 @@
             "typography": [
                 "./dist/types/components/typography.d.ts"
             ],
-            "warning-box": [
-                "./dist/types/components/warning-box.d.ts"
+            "feedback-box": [
+                "./dist/types/components/feedback-box.d.ts"
             ]
         }
     },
