--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -284,14 +284,14 @@
     "dependencies": {
         "@carrot-kpi/sdk": "*",
         "@popperjs/core": "^2.11.8",
-        "@tiptap/extension-placeholder": "2.1.8",
-        "@tiptap/pm": "^2.1.7",
-        "@tiptap/react": "2.1.8",
-        "@tiptap/starter-kit": "2.1.8",
+        "@tiptap/extension-placeholder": "2.1.11",
+        "@tiptap/pm": "^2.1.11",
+        "@tiptap/react": "2.1.11",
+        "@tiptap/starter-kit": "2.1.11",
         "@types/react-virtualized-auto-sizer": "^1.0.1",
         "@uniswap/token-lists": "1.0.0-beta.33",
         "class-variance-authority": "^0.7.0",
-        "dayjs": "^1.11.8",
+        "dayjs": "^1.11.10",
         "decimal.js-light": "^2.5.1",
         "rc-switch": "^4.1.0",
         "react-number-format": "^5.3.0",
@@ -300,7 +300,7 @@
         "react-virtualized-auto-sizer": "^1.0.20",
         "react-window": "^1.8.9",
         "tailwind-merge": "^1.14.0",
-        "viem": "^1.10.4"
+        "viem": "^1.15.3"
     },
     "peerDependencies": {
         "@carrot-kpi/switzer-font": "^0.1.0",
@@ -308,47 +308,48 @@
         "react": "^18.2.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.22.11",
-        "@babel/preset-env": "^7.22.14",
+        "@babel/core": "^7.23.0",
+        "@babel/preset-env": "^7.22.20",
         "@babel/preset-react": "^7.22.5",
-        "@babel/preset-typescript": "^7.22.11",
+        "@babel/preset-typescript": "^7.23.0",
         "@carrot-kpi/switzer-font": "^0.1.0",
-        "@rollup/plugin-commonjs": "^25.0.4",
-        "@rollup/plugin-node-resolve": "^15.2.1",
+        "@rollup/plugin-commonjs": "^25.0.5",
+        "@rollup/plugin-node-resolve": "^15.2.2",
         "@size-limit/file": "^9.0.0",
-        "@storybook/addon-actions": "^7.4.0",
-        "@storybook/addon-essentials": "^7.4.0",
-        "@storybook/addon-interactions": "^7.4.0",
-        "@storybook/addon-links": "^7.4.0",
+        "@storybook/addon-actions": "^7.4.6",
+        "@storybook/addon-essentials": "^7.4.6",
+        "@storybook/addon-interactions": "^7.4.6",
+        "@storybook/addon-links": "^7.4.6",
         "@storybook/addon-styling": "^1.3.7",
-        "@storybook/manager-api": "^7.4.0",
-        "@storybook/react": "^7.4.0",
-        "@storybook/react-webpack5": "^7.4.0",
-        "@storybook/testing-library": "^0.2.0",
-        "@storybook/theming": "^7.4.0",
+        "@storybook/manager-api": "^7.4.6",
+        "@storybook/react": "^7.4.6",
+        "@storybook/react-webpack5": "^7.4.6",
+        "@storybook/testing-library": "^0.2.2",
+        "@storybook/theming": "^7.4.6",
         "@tailwindcss/typography": "^0.5.10",
-        "@types/react": "^18.2.21",
-        "@types/react-window": "^1.8.5",
-        "@types/rollup-plugin-peer-deps-external": "^2.2.1",
-        "autoprefixer": "^10.4.15",
+        "@types/react": "^18.2.25",
+        "@types/react-window": "^1.8.6",
+        "@types/rollup-plugin-peer-deps-external": "^2.2.2",
+        "autoprefixer": "^10.4.16",
         "eslint-config-custom": "*",
         "eslint-plugin-prettier": "^5.0.0",
         "eslint-plugin-react": "^7.33.2",
         "file-loader": "^6.2.0",
-        "postcss": "^8.4.29",
+        "postcss": "^8.4.31",
         "postcss-loader": "^7.3.3",
         "prettier": "^3.0.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "rimraf": "^5.0.0",
-        "rollup": "^3.29.0",
-        "rollup-plugin-esbuild": "^5.0.0",
+        "rimraf": "^5.0.5",
+        "rollup": "^3.29.4",
+        "rollup-plugin-esbuild": "^6.0.2",
         "rollup-plugin-peer-deps-external": "^2.2.4",
         "rollup-plugin-postcss": "^4.0.2",
         "size-limit": "^9.0.0",
-        "storybook": "^7.4.0",
+        "storybook": "^7.4.6",
         "tailwindcss": "^3.3.3",
         "tsconfig": "*",
+        "turbo": "^1.10.15",
         "typescript": "^5.2.2"
     }
 }
