--- a/packages/subgraph/tsconfig.json
+++ b/packages/subgraph/tsconfig.json
@@ -1,4 +1,8 @@
 {
-  "extends": "@graphprotocol/graph-ts/types/tsconfig.base.json",
-  "include": ["src"]
+    "extends": "@graphprotocol/graph-ts/types/tsconfig.base.json",
+    "include": ["src"],
+    "compilerOptions": {
+        "noLib": false,
+        "lib": ["ESNext"]
+    }
 }
