feat: update contract addresses and subgraph

--- a/packages/subgraph/.eslintrc
+++ b/packages/subgraph/.eslintrc
@@ -3,5 +3,6 @@
     "extends": ["custom"],
     "rules": {
         "@typescript-eslint/ban-types": "off"
-    }
+    },
+    "ignorePatterns": "src/gen/**"
 }
