--- a/packages/subgraph/package.json
+++ b/packages/subgraph/package.json
@@ -4,10 +4,10 @@
     "version": "0.8.1",
     "license": "GPL-3.0-or-later",
     "scripts": {
-        "codegen": "graph codegen",
-        "clean": "rimraf generated build",
-        "build": "yarn clean && yarn codegen && graph build",
         "gen-networks-files": "ts-node scripts/generate-networks-files.ts",
+        "codegen": "graph codegen && yarn gen-networks-files",
+        "clean": "rimraf generated build && rimraf generated src/gen",
+        "build": "yarn clean && yarn codegen && graph build",
         "deploy:sepolia": "yarn gen-networks-files && graph deploy --product hosted-service --network sepolia carrot-kpi/carrot-sepolia",
         "deploy:gnosis": "yarn gen-networks-files && graph deploy --product hosted-service --network gnosis carrot-kpi/carrot-gnosis",
         "create-local": "graph create --node http://localhost:8020/ carrot-kpi/carrot-kpi-local",
