feat: update contract addresses and subgraph (#444)
* feat: update contract addresses and subgraph

* fix(subgraph): fix script situation with codegen

* chore: add changesets

* feat(subgraph): update kpi token abi and subgraph logic

* chore(sdk): update kpi token abi

* chore: add changeset

---------

Co-authored-by: luzzifoss <fedeluzzi00@gmail.com>

--- a/packages/subgraph/package.json
+++ b/packages/subgraph/package.json
@@ -4,19 +4,19 @@
     "version": "0.8.1",
     "license": "GPL-3.0-or-later",
     "scripts": {
-        "codegen": "graph codegen",
-        "clean": "rimraf generated build",
+        "gen-networks-files": "ts-node scripts/generate-networks-files.ts",
+        "codegen": "graph codegen && yarn gen-networks-files",
+        "clean": "rimraf generated build && rimraf generated src/gen",
         "build": "yarn clean && yarn codegen && graph build",
-        "gen-networks-file": "ts-node scripts/generate-networks-file.ts",
-        "deploy:sepolia": "yarn gen-networks-file && graph deploy --product hosted-service --network sepolia carrot-kpi/carrot-sepolia",
-        "deploy:gnosis": "yarn gen-networks-file && graph deploy --product hosted-service --network gnosis carrot-kpi/carrot-gnosis",
+        "deploy:sepolia": "yarn gen-networks-files && graph deploy --product hosted-service --network sepolia carrot-kpi/carrot-sepolia",
+        "deploy:gnosis": "yarn gen-networks-files && graph deploy --product hosted-service --network gnosis carrot-kpi/carrot-gnosis",
         "create-local": "graph create --node http://localhost:8020/ carrot-kpi/carrot-kpi-local",
         "remove-local": "graph remove --node http://localhost:8020/ carrot-kpi/carrot-kpi-local",
         "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 carrot-kpi/carrot-kpi-local",
         "test": "echo 'Make Matchstick work...'"
     },
     "devDependencies": {
-        "@carrot-kpi/contracts": "^0.4.0",
+        "@carrot-kpi/contracts": "^0.8.0",
         "@graphprotocol/graph-cli": "0.59.0",
         "@graphprotocol/graph-ts": "0.31.0",
         "eslint-config-custom": "*",
