feat(frontend): add e2e tests setup with playwright and synpress

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,8 @@ jobs:
         run: yarn lint
       - name: Test
         run: yarn test
+      - name: Test e2e
+        run: yarn test:e2e
       - name: Build
         run: yarn build
       - name: Size check
