--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,8 @@ jobs:
         run: yarn lint
       - name: Test
         run: yarn test
+      - name: Install Playwright browsers
+        run: npx playwright install --with-deps
       - name: Test e2e
         run: yarn test:e2e
       - name: Build
